fix wasm url, allow building locally

--- a/.gitlab/ci.yml
+++ b/.gitlab/ci.yml
@@ -9,15 +9,7 @@ build:
     before_script:
         - curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
     script:
-        # rustwasm
-        - mkdir -p .public/.wasm
-        - cd rustwasm
-        - wasm-pack build --target web
-        - cd ..
-        - mv rustwasm/pkg/springbox_bg.wasm .public/.wasm/index.wasm
-        - mv rustwasm/pkg/springbox.js .public/.wasm/index.js
-        # static
-        - cp -r static/* .public
+        - bash build.sh
     artifacts:
         paths:
             - .public
